Added Association and Player Status
